erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | SELLER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    BLACKLISTS {
        INT blacklist_id PK
        INT blocker_id FK
        INT blocked_id FK
        DATETIME created_at
    }

    USERS ||--o{ BLACKLISTS : blocks
    USERS ||--o{ BLACKLISTS : blocked_by
